--- a/docker-compose/fifteen/frontend/src/App.css
+++ b/docker-compose/fifteen/frontend/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.game {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  color: #82c85a;
+  font-size: 32px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.move-count {
+  margin: 20px 0;
+}
+
+.board {
+  width: 408px;
+  padding: 5px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background: #fafafa;
+}
+
+.board > div {
+  width: 90px;
+  height: 90px;
+  float: left;
+  margin: 5px;
+  line-height: 90px;
+  font-size: 40px;
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: #fff;
+}
+
+.board > div.movable {
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.05);
+}
+
+.cell.movable:hover {
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.new-game {
+  cursor: pointer;
+  padding: 10px 20px 12px;
+  color: #fff;
+  margin-top: 20px;
+  border-radius: 10px;
+  background: #82c85a;
+}
+
+.new-game:hover {
+  background: #73b150;
 }
